[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-lp"
version = "0.1.1"
description = "Toolkit to express Linear Programs constraints in a symbolic and natural way and get parameterized matrix constraints."
authors = [{name = "Alexis DAVID"}]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["linear-programming", "optimization", "symbolic", "constraints", "mathematical-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "torch>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/davidaleprog/symbolic_lp"  # Update with your actual GitHub URL
Repository = "https://github.com/davidaleprog/symbolic_lp"
Issues = "https://github.com/davidaleprog/symbolic_lp/issues"